# split_cidrs_to_subnet_rust

./: Cargo.toml  ips-v4.txt  output_cidrs.txt
src/: 划分若干个子网CIDR(使用ipnetwork依赖).rs  划分若干个子网CIDR(利用位运算).rs
