[package]
name = "split_cidr_to_subnet_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.20.0"
regex = "1.9.5"


[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]